# rift-experimental

./: .gitattributes  CMakeLists.txt  CMakeLists.txt.advanced  CMakeLists.txt.backup  CMakeLists.txt.old  Makefile  Makefile.comprehensive  Makefile.old  Makefile.pre_aegis  Makefile.pre_aegis.old  README.md  Rift Architecture Gossip (4).docx  docs.txt  enhanced_schema_json.json  rift-comprehensive.pc.in  rift-core-qa.pc.in  rift_architecture_gossip (3).md  rift_branch_cleanup.sh  rift_project_index.txt  rko.sh
ddn/: CMakeLists.txt  Makefile
ddn/cmake/: Config.cmake
ddn/include/: confusion_matrix.h
ddn/src/: confusion_matrix.c
ddn/tests/: test_confusion_matrix.c
governance/: CMakeLists.txt
rift/: .gitignore  .riftrc  CMakeLists.txt  demo_pipeline.sh
rift-core/: CMakeLists.txt
rift-core/config/: gov.riftrc.0  gov.riftrc.1  gov.riftrc.2  gov.riftrc.3  gov.riftrc.4  gov.riftrc.5  gov.riftrc.6  governance.json
rift-core/include/rift-core/: audit.h  core.h
rift-core/setup/: rift_project_index.txt  setup-rift-core.sh
rift-core/setup/rift-core/include/rift-core/audit/: tracer.h
rift-core/setup/rift-core/include/rift-core/thread/: lifecycle.h
rift-core/setup/rift-core/src/common/: core.c
rift-core/src/rift-core/: core.c
rift-old/rift-bridge/tools/ad-hoc/cmake/: CMakeLists.txt
rift/cmake/common/: compiler_pipeline.cmake
rift/examples/: test_input.rift
rift/include/rift/: rift.h
rift/include/rift/cli/: cli.h  commands.h
rift/include/rift/config/: config.h
rift/include/rift/core/: common.h  polic.h
rift/include/rift/core/bytecode/: bytecode.h
rift/include/rift/core/cli/: cli.h
rift/include/rift/core/config/: config.h
rift/include/rift/core/core/: core.h
rift/include/rift/core/emitter/: emitter.h
rift/include/rift/core/governance/: governance.h
rift/include/rift/core/lexer/: lexer.h
rift/include/rift/core/parser/: parser.h
rift/include/rift/core/semantic/: semantic.h
rift/include/rift/core/stage-0/: tokenizer.h
rift/include/rift/core/stage-1/: parser.h
rift/include/rift/core/stage-2/: semantic.h
rift/include/rift/core/stage-3/: validator.h
rift/include/rift/core/stage-4/: bytecode.h
rift/include/rift/core/stage-5/: verifier.h
rift/include/rift/core/stage-6/: emitter.h
rift/include/rift/core/token_type/: token_type.h
rift/include/rift/core/token_value/: token_value.h
rift/include/rift/core/tokenizer/: tokenizer.h
rift/include/rift/core/validator/: validator.h
rift/include/rift/core/verifier/: verifier.h
rift/include/rift/governance/: governance.h  policy.h
rift/pkgconfig/: rift-0.pc.in  rift-1.pc.in  rift-2.pc.in  rift-3.pc.in  rift-4.pc.in  rift-5.pc.in  rift-6.pc.in  validate-pkgconfig.sh
rift/pkgconfig/examples/: Makefile.example  pipeline-example.c  single-stage-example.c
rift/pkgconfig/templates/: PkgConfigIntegration.cmake  RootCMakeIntegration.cmake  Stage0CMakeIntegration.cmake  Stage1CMakeIntegration.cmake  Stage2CMakeIntegration.cmake  Stage3CMakeIntegration.cmake  Stage4CMakeIntegration.cmake  Stage5CMakeIntegration.cmake  Stage6CMakeIntegration.cmake
rift/rift-0/: CMakeLists.txt
rift/rift-1/: CMakeLists.txt
rift/rift-2/: CMakeLists.txt
rift/rift-3/: CMakeLists.txt
rift/rift-4/: CMakeLists.txt
rift/rift-5/: CMakeLists.txt
rift/rift-6/: CMakeLists.txt
rift/scripts/validation/: validate_rift.sh
rift/src/cli/: cli.c  main.c
rift/src/commands/: compile.c
rift/src/config/: config.c
rift/src/core/: rift.c
rift/src/core/bytecode/: bytecode.c
rift/src/core/cli/: cli.c
rift/src/core/config/: config.c
rift/src/core/core/: core.c
rift/src/core/emitter/: emitter.c
rift/src/core/governance/: governance.c
rift/src/core/lexer/: lexer.c
rift/src/core/parser/: parser.c
rift/src/core/semantic/: semantic.c
rift/src/core/stage-0/: tokenizer.c
rift/src/core/stage-1/: parser.c
rift/src/core/stage-2/: semantic.c
rift/src/core/stage-3/: validator.c
rift/src/core/stage-4/: bytecode.c
rift/src/core/stage-5/: verifier.c
rift/src/core/stage-6/: emitter.c
rift/src/core/token_type/: token_type.c
rift/src/core/token_value/: token_value.c
rift/src/core/tokenizer/: tokenizer.c
rift/src/core/validator/: validator.c
rift/src/core/verifier/: verifier.c
src/cli/: CMakeLists.txt  main.c
tools/: CMakeLists.txt  aegis_build_resolution.sh  aegis_recovery.sh  dependency_validation.sh  pkgconfig_system.sh  qa_framework.sh  qa_framework.sh.old  rift_core_pure_setup.sh  setup.sh  structure_analysis_20250622_155859.txt
tools/ad-hoc/: CMakeLists.txt  organize-rift-clutter.sh  rift_core_setup.sh  rift_project_index.txt  setup-rift-core.sh
tools/ad-hoc/rift-core/: CMakeLists.txt  README.md
tools/ad-hoc/rift-core/config/: gov.riftrc.0  gov.riftrc.1  gov.riftrc.2  gov.riftrc.3  gov.riftrc.4  gov.riftrc.5  gov.riftrc.6  governance.json
tools/ad-hoc/rift-core/include/rift-core/: core.h
tools/ad-hoc/rift-core/include/rift-core/audit/: tracer.h
tools/ad-hoc/rift-core/src/common/: core.c
tools/ad-hoc/rift-core/src/thread/: lifecycle.c
tools/ad-hoc/rift-core/tests/: CMakeLists.txt
tools/ad-hoc/rift-core/tests/unit/: test_core.c
tools/ad-hoc/telemetry/: file_inventory.json  setup_validation.txt
tools/build_orchestration/: hash_table_builder.c  hash_table_builder.h
tools/config_templates/: rift-0.pc.in  rift-1.pc.in  rift-2.pc.in  rift-3.pc.in  rift-4.pc.in  rift-5.pc.in  rift-6.pc.in
tools/rift-core/: CMakeLists.txt
tools/rift-core/include/rift-core/qa/: r_syntax_tokenizer.h
tools/rift-core/qa/specs/: tokenization.spec.rift
tools/rift-core/rifttest/: rifttest_runner.sh
tools/rift-core/src/qa/assertions/: rift_assertions.c
tools/rift-core/src/qa/ioc/: rift_test_ioc.c
tools/rift-core/src/qa/matrix/: qa_workflow_matrix.c
tools/rift-core/src/qa/r_syntax/: r_syntax_tokenizer.c
tools/rift-quarantine/: qa_framework.sh.backup  quarantine_log_20250622_155859.txt
tools/riftdocs/: CMakeLists.txt  riftdocs.pc.in
tools/riftdocs/src/: main.c
tools/setup/: create_directories.sh  generate_hash_table.sh  generate_source.sh  validate_stage.sh
(+520 files in other folders)
